[package]
name = "amm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
jupiter-amm-interface = "0.4.5"
lazy_static = "1.5.0"
rust_decimal = "1.36.0"
solana-sdk = "2.0.10"
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }

[dev-dependencies]
tokio = "^1"
solana-program-test = "2.0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
